// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PaymentConfirm /> should render with props 1`] = `
<div
  aria-hidden={false}
  className="css-1mi3tt8"
>
  <h2
    className="css-84al3w"
    data-testid="confirm-intent-name"
  >
    hey 
    mock_name
    !
  </h2>
  <p
    className="css-1358t0d"
  >
    Please review your payment details:
  </p>
  <div
    className="css-13cm5uv"
  >
    <div
      className="css-d34wob"
    >
      <p
        className="css-18poma1"
      >
        INTENT ID
      </p>
      <p
        className="css-1n4bukm"
        data-testid="confirm-intent-id"
      >
        mock_id
      </p>
      <p
        className="css-18poma1"
      >
        EMAIL
      </p>
      <p
        className="css-1n4bukm"
        data-testid="confirm-intent-email"
      >
        mock_email
      </p>
      <p
        className="css-18poma1"
      >
        PHONE
      </p>
      <p
        className="css-1n4bukm"
        data-testid="confirm-intent-phone"
      >
        mock_phone
      </p>
      <p
        className="css-18poma1"
      >
        ADDRESS
      </p>
      <p
        className="css-1n4bukm"
        data-testid="confirm-intent-address"
      >
        mock_address
      </p>
    </div>
    CartContent
  </div>
  <div
    className="css-dvxksz"
  >
    <button
      className="css-46aqdj"
      data-cy="button"
      data-testid="confirm-button-cancel"
      href="#0"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      CANCEL ORDER
    </button>
    <button
      className="css-187kagv"
      data-cy="button"
      data-testid="confirm-button-confirm"
      href="#0"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      CONFIRM ORDER
    </button>
  </div>
</div>
`;

exports[`<PaymentConfirm /> should render without props 1`] = `
<div
  aria-hidden={false}
  className="css-1mi3tt8"
>
  <h2
    className="css-84al3w"
    data-testid="confirm-intent-name"
  >
    hey 
    !
  </h2>
  <p
    className="css-1358t0d"
  >
    Please review your payment details:
  </p>
  <div
    className="css-13cm5uv"
  >
    <div
      className="css-d34wob"
    >
      <p
        className="css-18poma1"
      >
        INTENT ID
      </p>
      <p
        className="css-1n4bukm"
        data-testid="confirm-intent-id"
      />
      <p
        className="css-18poma1"
      >
        EMAIL
      </p>
      <p
        className="css-1n4bukm"
        data-testid="confirm-intent-email"
      />
      <p
        className="css-18poma1"
      >
        PHONE
      </p>
      <p
        className="css-1n4bukm"
        data-testid="confirm-intent-phone"
      />
      <p
        className="css-18poma1"
      >
        ADDRESS
      </p>
      <p
        className="css-1n4bukm"
        data-testid="confirm-intent-address"
      />
    </div>
    CartContent
  </div>
  <div
    className="css-dvxksz"
  >
    <button
      className="css-46aqdj"
      data-cy="button"
      data-testid="confirm-button-cancel"
      href="#0"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      CANCEL ORDER
    </button>
    <button
      className="css-187kagv"
      data-cy="button"
      data-testid="confirm-button-confirm"
      href="#0"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      CONFIRM ORDER
    </button>
  </div>
</div>
`;
